Try to fix an issue on mobile

--- a/src/app/05/play/_/Game/Game.module.css
+++ b/src/app/05/play/_/Game/Game.module.css
@@ -92,10 +92,6 @@
                 border-radius: 99vmax;
                 overflow: hidden;
 
-                &:active {
-                    filter: brightness(120%);
-                }
-
                 &::after, &:hover {
                     cursor: pointer;
                     content: "";
